# cinema-service-fastapi

./: .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  DockerfileNew  README.md  alembic.ini  docker-compose-local-new.yml  docker-compose-local.yml  docker-compose.yml  endpoints.md  pyproject.toml
.github/workflows/: main.yml
commands/: run_migration.sh
src/: celery_app.py  main.py  tasks.py  test_pipeline.py
src/accounts/: dependencies.py  s3_service.py  utils.py
src/accounts/repositories/: accounts.py  tokens.py
src/accounts/routes/: admin.py  auth.py  profile.py  routes.py
src/accounts/schemas/: __init__.py  accounts.py  tokens.py
src/accounts/security/: generate_keys.py  jwt.py  jwt_config.py
src/accounts/services/: accounts.py  email_service.py
src/accounts/validators/: __init__.py  accounts.py
src/celery_service/: celery_app.py  tasks.py
src/config/: __init__.py  dependencies.py  logging_settings.py  settings.py
src/database/: session_postgresql.py  session_sqlite.py  utils.py
src/database/alembic/: env.py
src/database/exceptions/: genres.py  movies.py  orders.py  shopping_cart.py  stars.py
src/database/migrations/: env.py
src/database/models/: __init__.py  accounts.py  base.py  movies.py  orders.py  payments.py  purchased.py  shopping_carts.py  tokens.py
src/database/validators/: __init__.py  purchased.py  (+1 more)
src/email/: config.py  constants.py  email_service.py
src/orders/: controllers.py  dependencies.py
src/payments/: controllers_payments.py
src/shopping_carts/: controllers.py  dependencies.py
(+60 files in other folders)
