[tool.poetry]
name = "src"
version = "0.1.0"
description = "Online Cinema Service"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
fastapi-mail = "^1.4.2"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
email-validator = "^2.2.0"
bcrypt = "4.0.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
jinja2 = "^3.1.5"
beautifulsoup4 = "^4.12.3"
validators = "^0.34.0"
botocore = "^1.35.99"
pillow = "^11.1.0"
python-multipart = "^0.0.20"
aiosmtplib = "<4.0.0"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"
aioboto3 = "^13.4.0"
gunicorn = "^23.0.0"
stripe = "^9.0.0"
celery = "^5.3.6"
redis = "^5.0.4"
minio = "^7.2.7"
greenlet = "^3.1.1"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"


pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
pytest-order = "^1.3.0"
pytest-env = "^1.1.5"
flake8 = "^7.1.1"
black = "^24.3.0"
mypy = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
